# bletio

./: Cargo.toml  build.rs  size_of.txt
.github/workflows/: general.yml  spec-files-update.yml  update-assigned-numbers.yml
bletio-hci/: Cargo.toml
bletio-hci/src/: acl_data.rs  advertising_data.rs  advertising_enable.rs  advertising_parameters.rs  buffer.rs  command.rs  connection_handle.rs  connection_interval.rs  connection_parameters.rs  connection_peer_address.rs  device_address.rs  error.rs  error_code.rs  event.rs  event_mask.rs  hci.rs  hci_buffer.rs  le_event_mask.rs  le_filter_accept_list_address.rs  lib.rs  own_address_type.rs  packet.rs  rssi.rs  scan_enable.rs  scan_interval.rs  scan_parameters.rs  scan_window.rs  supported_commands.rs  supported_features.rs  supported_le_features.rs  supported_le_states.rs  timeout_embassy.rs  timeout_tokio.rs  traits.rs  tx_power_level.rs
bletio-hci/src/advertising/: advertising_data.rs  advertising_enable.rs  (+2 more)
bletio-host/: Cargo.toml
bletio-host/src/: ble_device.rs  ble_device_information.rs  ble_host.rs  connection_parameters.rs  connection_update_parameters.rs  controller_capabilities.rs  controller_information.rs  device_information.rs  lib.rs  uuid.rs
bletio-host/src/advertising/: advertising_data.rs  advertising_parameters.rs  mod.rs  scan_parameters.rs  uri.rs
bletio-host/src/advertising/ad_struct/: advertising_interval.rs  appearance.rs  flags.rs  le_supported_features.rs  local_name.rs  manufacturer_specific_data.rs  mod.rs  peripheral_connection_interval_range.rs  public_target_address.rs  random_target_address.rs  service_data.rs  service_solicitation.rs  service_uuid.rs  tx_power_level.rs  uri.rs
bletio-host/src/assigned_numbers/: ad_types.rs  appearance_values.rs  company_identifiers.rs  mod.rs  service_uuids.rs  uri_schemes.rs
bletio-utils/: Cargo.toml
bletio-utils/src/: bit_flags_array.rs  buffer.rs  lib.rs
spec-files/: ad_types.yaml  company_identifiers.yaml  service_uuids.yaml
src/: connection_interval_value.rs  le_states.rs  lib.rs  utils.rs  uuid.rs
src/advertising/: advertising_data.rs  advertising_data_type.rs  advertising_parameters.rs  flags.rs  mod.rs  tx_power_level.rs
src/assigned_numbers/: ad_types.rs  appearance_values.rs  company_identifiers.rs  mod.rs  service_uuids.rs  services.rs  uri_schemes.rs
src/hci/: command.rs  embassy.rs  error_code.rs  event.rs  event_mask.rs  event_parameter.rs  le_features.rs  le_states.rs  mod.rs  opcode.rs  packet.rs  supported_commands.rs  supported_features.rs  supported_le_features.rs  supported_le_states.rs  tokio.rs
src/utils/: bit_flags_array.rs  buffer.rs  mod.rs
update-assigned-numbers/: Cargo.toml
update-assigned-numbers/src/: main.rs
(+44 files in other folders)
