[package]
name = "bletio"
version = "0.1.0"
edition = "2021"
authors = ["Ghislain MARY <ghislain@ghislainmary.fr>"]
description = "BLE stack"
license = "MIT OR Apache-2.0"
keywords = ["no-std", "ble", "bluetooth"]
categories = ["embedded", "no-std"]

[dependencies]
bitflags = "2.8"
embedded-io = "0.6"
embedded-io-async = "0.6"
thiserror = { version = "2.0", default-features = false }

[dev-dependencies]
approx = "0.5"
claims = "0.8"

[workspace]
members = ["update-assigned-numbers"]
